# mqtt_broker

./: .gitignore  CMakeLists.txt  README.md  main.cpp  version.h.in
.github/workflows/: release.yml
cfg/: mqtt_broker.cfg
doc/: Doxyfile  to_do
headers/: MqttPacketHandler.h  client.h  command.h  conn_properties.h  functions.h  mqtt_broker.h  mqtt_error_handler.h  mqtt_protocol.h  mqtt_variable_header.h  topic_storage.h
headers/libconfig/: libconfig.h++
headers/spdlog/: common.h  spdlog.h
headers/spdlog/details/: os-inl.h  registry-inl.h  synchronous_factory.h
headers/spdlog/sinks/: basic_file_sink.h  kafka_sink.h  msvc_sink.h  stdout_sinks-inl.h
src/: broker.cpp  client.cpp  command.cpp  conn_properties.cpp  functions.cpp  handlers.cpp  mqtt_error_handler.cpp  mqtt_fixed_header.cpp  mqtt_packet_handler.cpp  mqtt_protocol.cpp  mqtt_subscription.cpp  mqtt_topic.cpp  mqtt_variable_header.cpp  topic_storage.cpp
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tests.cpp
